--- a/CRM_Backend/.env
+++ b/CRM_Backend/.env
@@ -1,1 +1,1 @@
-mongo_uri = "mongodb+srv://manikanta:mani@cluster0.xf1bdyi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+mongo_uri = "mongodb+srv://manikanta9652:test@cluster0.7qxjoka.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
